[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pier"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click",
    "harbor>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
pier = "pier.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "pier",
    "pier.*",
]

[tool.pytest.ini_options]
testpaths = ["pier/tests"]
markers = [
    "docker_integration: tests that require Docker and networked agent installation",
]

[tool.mypy]

[[tool.mypy.overrides]]
module = ["harbor", "harbor.*"]
ignore_missing_imports = true
